<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beautiful Quran</string>
    <string name="save">Save</string>
    <string name="replace">Replace</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="share_via">Share Via</string>
    <string name="delete">Delete</string>
    <string name="sdcard_required">You need an SD card to run this application!</string>
    <string name="confirm_quit">Do you really want to quit?</string>

    <!-- Bookmark -->
    <string name="select_folder">Add Bookmark to Folder</string>
    <string name="replace_confirm">Bookmark will be replaced. Are you sure?</string>
    <string name="create_folder_title">Create New Bookmark Folder</string>
    <string name="create_new">Create new&#8230;</string>
    <string name="create_add">Create &amp; Add</string>
    <string name="edit_folder_title">Edit Bookmark Folder</string>
    <string name="delete_bookmark_folder">"Delete bookmark folder?"</string>
    <string name="delete_bookmark_item">"Delete bookmark item?"</string>
    <string name="folder_name_hint">Enter bookmark folder name</string>
    <string name="folder_single">Single</string>
    <string name="folder_multiple">Multiple</string>

    <!-- Base Menu -->
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="settings">Settings</string>

    <!-- Viewer Menu -->
    <string name="view_as_sura">View as Sura</string>
    <string name="view_as_page">View as Page</string>
    <string name="view_as_juz">View as Juz</string>
    <string name="view_as_hizb">View as Hizb</string>

    <!-- About Dialog -->
    <string name="about">About</string>
    <string name="more_apps">More apps</string>
    <string name="okay">Close</string>
    <string name="copyright">Grafian Software Crafter 2013&#8211;2024\nBandung, Indonesia</string>
    <string name="website">https://grafian.com</string>

    <!-- Credits -->
    <string name="credit_quran_title">Quran text and translations</string>
    <string name="credit_quran_author">Tanzil Project</string>
    <string name="credit_quran_website">https://tanzil.net</string>
    <string name="credit_en_wbw_title">English word by word translation</string>
    <string name="credit_en_wbw_author">Dr. Shehnaz Shaikh M.D. &amp; Ms. Kausar Khatri</string>
    <string name="credit_en_wbw_website">http://emuslim.com/Quran/Translation_English.asp</string>
    <string name="credit_id_wbw_title">Indonesian word by word translation</string>
    <string name="credit_id_wbw_author">Quranterjemah.com</string>

</resources>