<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp" >

    <EditText
        android:id="@+id/folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/folder_name_hint"
        android:selectAllOnFocus="true" />

    <RadioGroup
        android:id="@+id/folder_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/folder_single"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/folder_single" />

        <RadioButton
            android:id="@+id/folder_multiple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/folder_multiple" />
    </RadioGroup>

</LinearLayout>